tests/NormalTests/paczka1/small_fuzzy/14593422.err
Error in line 1: mz2Q A485 85,4
Error in line 2: tYCUqPLAbwl S125 82,7
